--- a/app/src/main/res/layout/activity_async.xml
+++ b/app/src/main/res/layout/activity_async.xml
@@ -6,4 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".AsyncActivity">
 
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:visibility="invisible"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="400dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="54dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:onClick="handleClick"
+        android:id="@+id/buttondownload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="58dp"
+        android:layout_marginEnd="127dp"
+        android:text="download"
+        app:layout_constraintEnd_toEndOf="@+id/progressBar"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
